# pulse-agent

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/: juejin_promotion.md  tui_demo.txt  xiaoheihe_promotion.md
docs/posts/: reddit_localllama.md  show_hn.md  twitter_thread.md
examples/: MEMORY.md  USER.md  golden_tasks.txt
pulse/: __init__.py  analytics.py  net.py  py.typed
pulse/audio/: README.md
pulse/cli/: __init__.py  doctor.py  health.py  init_wizard.py  main.py  mcp_cli.py  runtime.py  runtime_ext.py  skills_cli.py
pulse/config/: __init__.py  settings.py
pulse/enterprise/: __init__.py
pulse/evolution/: __init__.py
pulse/gateways/: __init__.py  base.py  social.py  telegram.py  tui.py
pulse/i18n/: __init__.py
pulse/llm/: __init__.py  async_provider.py  config.py  provider.py  router.py
pulse/mcp/: __init__.py  client.py
pulse/memory/: __init__.py  compactor.py  dialectic.py  session_index.py  store.py  user_profile.py
pulse/observability/: __init__.py  tracing.py
pulse/orchestrator/: __init__.py  context_budget.py  loop.py  observability.py  rate_limiter.py  recovery.py  subagent.py
pulse/plugins/: __init__.py  loader.py  sandbox.py
pulse/rag/: __init__.py  pipeline.py  vector.py
pulse/resilience/: __init__.py
pulse/rl/: __init__.py  export.py  train.py
pulse/scheduler/: __init__.py  cron.py
pulse/security/: __init__.py
pulse/skills/: __init__.py  curator.py  evaluator.py  evolution.py  executable.py  (+6 more)
scripts/: benchmark.py
tests/: _helpers.py  test_cli_coverage.py  test_cli_runtime.py  test_coding_tools.py  test_coverage_boost.py  test_coverage_gaps.py  test_e2e.py  test_enterprise.py  test_evolution.py  test_extensions.py  test_extensions2.py  test_gateways.py  test_hardening.py  test_health_social.py  test_i18n.py  test_llm_provider.py  test_m4.py  test_m5.py  test_mcp.py  test_memory.py  test_net.py  test_reliability.py  test_rollback_issue.py  test_security.py  test_skills.py  test_social_gateway.py  test_storage_lock.py  test_subagent.py  test_tools_core.py  test_tools_loader.py  test_versioning.py  test_web_app.py
(+19 files in other folders)
