[project]
name = "pulse-agent"
version = "0.3.0"
description = "Pulse — a Hermes-style self-improving personal AI agent, rebuilt with a lightweight core: reliability-first orchestration, an evaluated skill self-evolution loop, and zero-config local hosting."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "pydantic>=2.2",
    "openai>=1.30",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.25"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
pulse = "pulse.cli.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pulse*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
