[project]
name = "pulse-agent"
version = "0.6.1"
description = "Pulse — a self-improving personal AI agent with a reliability-first core. Fully self-hostable by default (Ollama + SQLite FTS5, zero cloud dependency)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "pydantic>=2.2",
    "openai>=1.30",
    "flask>=3.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.25"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
pulse = "pulse.cli.main:app"

[project.urls]
Homepage = "https://github.com/Alex663028/pulse-agent"
Repository = "https://github.com/Alex663028/pulse-agent"
Issues = "https://github.com/Alex663028/pulse-agent/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pulse*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
